src/main/java/org/example/moviesplatform/error/model/RoleNotFoundException.java
package org.example.moviesplatform.error.model;

public class RoleNotFoundException extends RuntimeException {
    public RoleNotFoundException(String message) {
        super(message);
    }
}